Avancée du projet

--- a/templates/jeu/index.html.twig
+++ b/templates/jeu/index.html.twig
@@ -5,5 +5,6 @@
 {# 'title' à ne pas confondre avec le 'h1'#}
 
 {% block body %}
-	{% include 'jeu/sous-menu.html.twig' %}
+	<!--bootstrap (mt-5 = margin-top-->
+	<h1 class="text-center mt-5">Bienvenue sur Loca Jeu</h1>
 {% endblock %}
