--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,12 +28,43 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Accueil</a>
+							<a class="nav-link active" aria-current="page" href="{{ path('app_jeu') }}">Accueil</a>
 						</li>
+					</ul>
+					<ul class="navbar-nav mb-2 mb-lg-0">
+						{% if app.user %}
+							<li class="nav-item">
+								<a href="{{ path('app_profil') }}" class="nav-link active" aria-current="page">Mon compte</a>
+							</li>
+
+							<li class="nav-item">
+								<a href="{{ path('app_logout') }}" class="nav-link active" aria-current="page">Deconnexion</a>
+							</li>
+						{% else %}
+							<li class="nav-item">
+								<a href="{{ path('app_register') }}" class="nav-link active" aria-current="page">Inscription</a>
+							</li>
+							<li class="nav-item">
+								<a href="{{ path('app_login') }}" class="nav-link active" aria-current="page">Connexion</a>
+							</li>
+						{% endif %}
+
+
 					</ul>
 				</div>
 			</div>
 		</nav>
+		{#AFFICHAGE de mon FLASH MESSAGE: #}
+		{% for type, messages in app.session.flashBag.all %}
+			{% for message in messages %}
+				<div
+					class="alert alert-{{ type }}">
+					{#{{ type }} = "sucess" #}
+					{{ message }}
+				</div>
+			{% endfor %}
+		{% endfor %}
+
 		{% block body %}{% endblock %}
 	</body>
 	<!--CE FICHIER BASE SERA ETENDU A CHAQUE FOIS A CHAQUE PAGE DE NOTRE APPLICATION , IL SERA CUSTOMIZE PAR CES DERNIERE . C'EST UN TEMPLATE-->
