Projet complet avant Optimisation du code avec Partials.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,24 +28,33 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="{{ path('app_jeu') }}">Accueil</a>
+							<a class="nav-link {{ (app.request.get('_route') == "app_jeu") ? 'active' : '' }}" aria-current="page" href="{{ path('app_jeu') }}">Accueil</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link {{ (app.request.get('_route') == "app_jeu_liste") ? 'active' : '' }}" aria-current="page" href="{{ path('app_jeu_liste') }}">Nos Jeux </a>
 						</li>
 					</ul>
 					<ul class="navbar-nav mb-2 mb-lg-0">
 						{% if app.user %}
+
+							{% if is_granted('ROLE_ADMIN') %}
 							<li class="nav-item">
-								<a href="{{ path('app_profil') }}" class="nav-link active" aria-current="page">Mon compte</a>
+								<a href="{{ path('app_admin') }}" class="nav-link" aria-current="page">Admin</a>
+							{% endif %}
+
+							</li><li class="nav-item">
+								<a href="{{ path('app_profil') }}" class="nav-link {{ (app.request.get('_route') == "app_profil") ? 'active' : '' }}" aria-current="page">Mon compte</a>
 							</li>
 
 							<li class="nav-item">
-								<a href="{{ path('app_logout') }}" class="nav-link active" aria-current="page">Deconnexion</a>
+								<a href="{{ path('app_logout') }}" class="nav-link" aria-current="page">Deconnexion</a>
 							</li>
 						{% else %}
 							<li class="nav-item">
-								<a href="{{ path('app_register') }}" class="nav-link active" aria-current="page">Inscription</a>
+								<a href="{{ path('app_register') }}" class="nav-link {{ (app.request.get('_route') == "app_register") ? 'active' : '' }}" aria-current="page">Inscription</a>
 							</li>
 							<li class="nav-item">
-								<a href="{{ path('app_login') }}" class="nav-link active" aria-current="page">Connexion</a>
+								<a href="{{ path('app_login') }}" class="nav-link {{ (app.request.get('_route') == "login") ? 'active' : '' }}" aria-current="page">Connexion</a>
 							</li>
 						{% endif %}
 
