--- a/templates/jeu/liste.html.twig
+++ b/templates/jeu/liste.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Bonjour!
+{% block title %}Tous les jeux de LocaJeu
 {% endblock %}
 {# 'title' à ne pas confondre avec le 'h1'#}
 
@@ -8,9 +8,9 @@
 	<div
 		class="container mt-5">
 		<!--bootstrap (mt-5 = margin-top-->
-		<h1 class="text-center ">Bienvenue sur Loca Jeu</h1>
+		<h1 class="text-center ">Tous les jeux </h1>
 		<p class="text-center">
-			Louez vos jeux de société , de particulier à particulier
+			Découvrez l'intégralité de notre ludotheque
 		</p>
 
 		<div
