--- a/templates/registration/index.html.twig
+++ b/templates/registration/index.html.twig
@@ -9,8 +9,10 @@
 		{# method form_start ("ici: variable 'form' qui contient notre formulaire") #}
 		{{ form_start(form) }}
 		{{ form_row(form.email) }}
-		{{ form_row(form.prenom) }}
-		{{ form_row(form.nom) }}
+		<div class="row">
+			<div class="col">{{ form_label(form.prenom) }} * {{ form_widget(form.prenom) }} {{ form_errors(form.prenom) }}</div>
+			<div class="col">{{ form_row(form.nom) }}</div>
+		</div>
 		{{ form_row(form.password) }}
 
 		<button type="submit" class="btn btn-success">S'inscrire</button>
