--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -3,75 +3,59 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Welcome!
+			{% block title %}Admin -
 			{% endblock %}
 		</title>
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
 		{% block stylesheets %}
-			{{ encore_entry_link_tags('app') }}
+			{{ encore_entry_link_tags('admin') }}
 		{% endblock %}
 
 		{% block javascripts %}
-			{{ encore_entry_script_tags('app') }}
+			{{ encore_entry_script_tags('admin') }}
 			{% block importmap %}
 				{{ importmap('app') }}
 			{% endblock %}
 		{% endblock %}
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg bg-body-tertiary">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="#">LocaJeu</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="{{ path('app_jeu') }}">Accueil</a>
-						</li>
-					</ul>
-					<ul class="navbar-nav mb-2 mb-lg-0">
-						{% if app.user %}
-
-							{% if is_granted('ROLE_ADMIN') %}
-							<li class="nav-item">
-								<a href="{{ path('app_admin') }}" class="nav-link active" aria-current="page">Admin</a>
-							{% endif %}
-
-							</li><li class="nav-item">
-								<a href="{{ path('app_profil') }}" class="nav-link active" aria-current="page">Mon compte</a>
-							</li>
-
-							<li class="nav-item">
-								<a href="{{ path('app_logout') }}" class="nav-link active" aria-current="page">Deconnexion</a>
-							</li>
-						{% else %}
-							<li class="nav-item">
-								<a href="{{ path('app_register') }}" class="nav-link active" aria-current="page">Inscription</a>
-							</li>
-							<li class="nav-item">
-								<a href="{{ path('app_login') }}" class="nav-link active" aria-current="page">Connexion</a>
-							</li>
-						{% endif %}
-
-
-					</ul>
-				</div>
+	{#Bootstrap : container-fluid il n'a pas de marge (margin:0) contrairement au 'container' tout cours #}
+	<div class="container-fluid">
+		<div class="row">
+			{# Sidebar starts | col-2 signifie que la sidebar prendra 2/12 de colonnes de largeur à partir de la gauche  #}
+			<div class="col-2 sidebar">
+				<a href = "{{ path('app_admin') }}"><div class="sidebar__onglet">Dashbord</div></a>
+				<a href = "{{ path('app_admin_genre') }}"><div class="sidebar__onglet">Lister les genres</div></a>
+				<a href = "{{ path('app_admin_jeu') }}"><div class="sidebar__onglet">Lister les jeux</div></a>
 			</div>
-		</nav>
-		{#AFFICHAGE de mon FLASH MESSAGE: #}
-		{% for type, messages in app.session.flashBag.all %}
-			{% for message in messages %}
-				<div
-					class="alert alert-{{ type }}">
-					{#{{ type }} = "sucess" #}
-					{{ message }}
-				</div>
-			{% endfor %}
-		{% endfor %}
+			{# Sidebar ends #}
 
-		{% block body %}{% endblock %}
+		{# main contain starts | col ici signifie que la sidebar prendra  automatiquement 10/12 de colonnes de largeur à droite de la sidebar qui prend deja 2/12 #}
+		<div class="col">
+			{#AFFICHAGE de mon FLASH MESSAGE: #}
+			{% for type, messages in app.session.flashBag.all %}
+				{% for message in messages %}
+					<div
+							class="alert alert-{{ type }}">
+						{#{{ type }} = "sucess" #}
+						{{ message }}
+					</div>
+				{% endfor %}
+			{% endfor %}
+
+			{# Le corps de la partie admin  #}
+			<div class="container mt-5">
+				{% block body %}{% endblock %}
+			</div>
+
+		</div>
+		</div>
+
+	</div>
+
+
+
+
 	</body>
 	<!--CE FICHIER BASE SERA ETENDU A CHAQUE FOIS A CHAQUE PAGE DE NOTRE APPLICATION , IL SERA CUSTOMIZE PAR CES DERNIERE . C'EST UN TEMPLATE-->
 </html>
