--- a/templates/admin/genre/editer.html.twig
+++ b/templates/admin/genre/editer.html.twig
@@ -1,9 +1,9 @@
 {% extends 'admin/base.html.twig' %}
 
-{% block title %} Ajouter un genre {% endblock %}
+{% block title %} {{ app.request.get('_route') == 'app_admin_genre_ajouter' ? 'Ajouter' : 'Modifier' }} un genre {% endblock %}
 
 {% block body %}
-    <h1> Ajouter un genre</h1>
+    <h1> {{ app.request.get('_route') == 'app_admin_genre_ajouter' ? 'Ajouter' : 'Modifier' }} un genre</h1>
 
     <div class="w-50 mt-5">
         {{ form_start(form) }}
@@ -12,7 +12,7 @@
         {{ form_row(form.popularite) }}
         {{ form_row(form.couleur) }}
 
-        <button class="btn btn-success" type="submit">Ajouter</button>
+        <button class="btn btn-success" type="submit">{{ app.request.get('_route') == 'app_admin_genre_ajouter' ? 'Ajouter' : 'Modifier' }} </button>
 
         {{ form_end(form) }}
     </div>
