--- a/templates/admin/jeu/editer.html.twig
+++ b/templates/admin/jeu/editer.html.twig
@@ -1,18 +1,19 @@
 {% extends 'admin/base.html.twig' %}
 
-{% block title %} {{ app.request.get('_route') == 'app_admin_genre_ajouter' ? 'Ajouter' : 'Modifier' }} un genre {% endblock %}
+{% block title %} {{ app.request.get('_route') == 'app_admin_jeu_ajouter' ? 'Ajouter' : 'Modifier' }} un jeu {% endblock %}
 
 {% block body %}
-    <h1> {{ app.request.get('_route') == 'app_admin_genre_ajouter' ? 'Ajouter' : 'Modifier' }} un genre</h1>
+    <h1> {{ app.request.get('_route') == 'app_admin_jeu_ajouter' ? 'Ajouter' : 'Modifier' }} un jeu</h1>
 
     <div class="w-50 mt-5">
         {{ form_start(form) }}
 
         {{ form_row(form.nom) }}
-        {{ form_row(form.popularite) }}
-        {{ form_row(form.couleur) }}
+        {{ form_row(form.genre) }}
+        {{ form_row(form.dateSortie) }}
+        {{ form_row(form.description) }}
 
-        <button class="btn btn-success" type="submit">{{ app.request.get('_route') == 'app_admin_genre_ajouter' ? 'Ajouter' : 'Modifier' }} </button>
+        <button class="btn btn-success" type="submit">{{ app.request.get('_route') == 'app_admin_jeu_ajouter' ? 'Ajouter' : 'Modifier' }} </button>
 
         {{ form_end(form) }}
     </div>
